fix: correct z-index value and add close button

--- a/react/Components/whats-app-widget.css
+++ b/react/Components/whats-app-widget.css
@@ -155,3 +155,15 @@
   margin: 30px 5px;
   text-align: center;
 }
+
+.close-head-modal {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 30px;
+  cursor: pointer;
+}
+
+.icon-close-head-modal {
+
+}
